@@ -1,3 +1,8 @@
+2008-01-30  Greg Steuck  <greg@nest.cx>  (tiny change)
+
+	* inf-haskell.el (inferior-haskell-cabal-of-buf)
+	(inferior-haskell-module-alist-file): Adjust for XEmacs.
+
 2008-01-17  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* haskell-cabal.el (haskell-cabal-font-lock-keywords): Add rules
